# cold-mail-agent

./: .gitignore  README.md  pyproject.toml
sample_data/: campaign.yaml  leads.csv  leads_test.csv
src/cold_email_agent/: __init__.py  cli.py  config.py  countries.py  gemini_client.py  io_utils.py  models.py  pipeline.py  prompts.py
tests/: test_pipeline.py
